@@ -49,6 +49,10 @@ fun JvmTestSuite.addSnapshotBuildToolsImpl() {
     targets.all {
         testTask.configure {
             addClasspathProperty(buildToolsApiImplResolvable.get(), COMPILER_CLASSPATH_PROPERTY)
+            jvmArgs(
+                // additions for SDK 261
+                "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+            )
         }
     }
 }
